--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY = "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"
+GOOGLE_API_KEY = "AIzaSyDcq4u_DNrPCmdY-ThkJOOn5xqhEqOx2KE"
